--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,11 @@
             <version>1.16.16</version>
             <scope>provided</scope>
         </dependency>
-
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>19.0</version>
+        </dependency>
 
     </dependencies>
     <build>
